# asset-pricing

./: .gitignore  PROJECT_ACHIEVEMENT_SUMMARY.md  add_compute_columns.py  build_monthly_feature_workbook.py  build_predictor_outputs.py  generate_synthetic_market_data.py  lean.json  ml_results.tgz  report.html
ml_pipeline/: __init__.py  cli.py  data_loader.py  evaluation.py  models.py  pipeline.py  pipeline_fast.py  test_single.py  vip_importance.py
ml_results_cache/: best_params.json  variable_importance_cache.json
p2/: config.json  db-universe-payload.json  db_universe_custom_data.py  export_combined_cumulative_returns_html.py  export_model_panel_excel.py  generate_full_report_v2.py  main.py  requirements.txt  research.ipynb  research_custom_data.ipynb  run_lean_reports.sh  utils.py
p2/backtests/2026-04-14_19-11-08/: 1973704487-log.txt  1973704487-order-events.json  1973704487-summary.json  1973704487.json  config  data-monitor-report-20260414134127722.json  failed-data-requests-20260414134111729.txt  log.txt  succeeded-data-requests-20260414134111729.txt
p2/backtests/2026-04-14_19-11-08/code/: research.ipynb
p2/backtests/2026-04-23_23-21-13/: 1503112770-summary.json  1503112770.json  config  log.txt
p2/backtests/2026-04-23_23-21-13/code/: db_tick_custom_data.py
p2/backtests/2026-04-23_23-21-13/code/components_runtime/index_constituents/: __init__.py
p2/backtests/2026-04-23_23-21-13/code/db_interface/: database.py
p2/backtests/2026-04-23_23-23-33/: 1588748096-summary.json  1588748096.json  config  log.txt
p2/backtests/2026-04-23_23-24-43/: 1519792167-summary.json  1519792167.json  config  log.txt
p2/backtests/2026-04-23_23-24-43/code/components_runtime/index_constituents/: service.py
p2/backtests/2026-04-23_23-25-29/: 1684964218-summary.json  1684964218.json  config  log.txt
p2/backtests/2026-04-23_23-26-24/: 1462687509-summary.json  1462687509.json  config  log.txt
p2/backtests/2026-04-23_23-26-24/code/db_interface/: models.py
p2/backtests/2026-04-23_23-26-41/: 1205701486-summary.json  1205701486.json  config  log.txt
p2/backtests/2026-04-23_23-26-41/code/: db_universe_custom_data.py
p2/backtests/2026-04-23_23-27-01/: 1501458207-summary.json  1501458207.json  config  log.txt
p2/backtests/2026-04-23_23-27-01/code/: main.py  research.ipynb  research_custom_data.ipynb
p2/backtests/2026-04-23_23-27-01/code/db_interface/: settings.py
p2/components_runtime/sector_tree/: __init__.py  tree.py
p2/db_interface/: cli.py
p2/db_interface/db_interface/: financial_data.py  models.py
p2/ml_inputs/: best_params.json
p2/ml_inputs/ml_pipeline/: __init__.py  data_loader.py  models.py  pipeline.py  plot_importance.py  test_single.py
providers/data/market/: README.md  docker-compose.yml  kite_historical_hardcoded_test.py  kite_login_flask_app.py
providers/data/market/components/: pyproject.toml
providers/data/market/components/db-interface/: Dockerfile  README.md  pyproject.toml
providers/data/market/components/db-interface/src/db_interface/: __init__.py  database.py  financial_data.py  settings.py
providers/data/market/components/db-interface/tests/: test_models.py
providers/data/market/components/financial-data-processor/: Dockerfile  README.md  __init__.py  cli.py  examples.py  examples_database.py  pyproject.toml
providers/data/market/components/financial-data-processor/src/financial_data_processor/: __init__.py  cli.py  models.py  service.py  settings.py  transformers.py
providers/data/market/components/financial-data-processor/tests/: test_service.py
providers/data/market/components/gateway-api/: Dockerfile  README.md  pyproject.toml
providers/data/market/components/gateway-api/src/gateway_api/: main.py  settings.py
providers/data/market/components/gateway-api/tests/: test_health.py
providers/data/market/components/historical-crawler/: Dockerfile  README.md  pyproject.toml
providers/data/market/components/historical-crawler/src/historical_crawler/: cli.py  models.py  service.py  settings.py
providers/data/market/components/historical-crawler/tests/: test_dates.py
providers/data/market/components/instruments-crawler/: Dockerfile  README.md  pyproject.toml
providers/data/market/components/instruments-crawler/src/instruments_crawler/: cli.py  service.py  settings.py
providers/data/market/components/instruments-crawler/tests/: test_filter.py
providers/data/market/components/provider-api/: Dockerfile  README.md  pyproject.toml
providers/data/market/components/provider-api/src/provider_api/: main.py  settings.py
providers/data/market/components/provider-api/tests/: test_response.py
providers/data/market/components/sector-tree/: README.md  __init__.py  cli.py  pyproject.toml
providers/data/market/components/sector-tree/src/sector_tree/: cli.py  settings.py
synthetic_data/csv_outputs/: build_all_features_csv.py  build_ff6_factors.py
synthetic_data/predictor_pipeline/: add_compute_columns.py  build_monthly_feature_workbook.py  build_predictor_outputs.py  generate_synthetic_market_data.py
