[project]
name = "provider-api"
version = "0.1.0"
description = "Kite-compatible historical API backed by local DB"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.12",
  "uvicorn>=0.34.2",
  "sqlalchemy>=2.0.38",
  "psycopg[binary]>=3.2.6",
  "pydantic-settings>=2.8.1",
  "db-interface",
]

[tool.uv.sources]
db-interface = { workspace = true }

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.11.7",
  "mypy>=1.15.0",
  "httpx>=0.28.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
