[project]
name = "sector-tree"
version = "0.1.0"
description = "Build and query a sector hierarchy tree from company_info"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "db-interface",
  "sqlalchemy>=2.0.38",
  "psycopg[binary]>=3.2.6",
  "pydantic-settings>=2.8.1",
]

[tool.uv.sources]
db-interface = { workspace = true }

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.11.7",
]

[project.scripts]
sector-tree = "sector_tree.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
